<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="90dp"
    android:orientation="vertical"
    android:gravity="left"
    tools:context=".SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title"
        android:text="@string/n_back_settings"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_weight="0"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="30dp"
        android:orientation="horizontal"
        android:gravity="left">

    <TextView
        android:id="@+id/text_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />

        <CheckBox
            android:id="@+id/checkAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/black"
            android:onClick="onAudClicked"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:id="@+id/text_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/black"
            android:onClick="onPosClicked"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="left">

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:backgroundTint="@color/black"
            android:text="@string/minus"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/black"
            android:text="@string/plus"
            android:textColor="@color/white"
             />

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/value_of_n"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/valueCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="left">

        <Button
            android:id="@+id/minusSecButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:backgroundTint="@color/black"
            android:text="@string/minus"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/plusSecButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/black"
            android:text="@string/plus"
            android:textColor="@color/white"
             />

        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/seconds_between_events"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/secCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />



    </LinearLayout>
    <!-- Button Used -->

</LinearLayout>